--- a/Practice/March12/HTML/index.html
+++ b/Practice/March12/HTML/index.html
@@ -39,12 +39,12 @@
       <li>Be able to webscrape</li>
       <li>woah!</li>
     </ol>
-    </div>
+  </div>
   </div>
 
     <p> One of my favorite things to do is garden, here's a picture from two summers ago :)</p>
     <img src="IMG_2042.JPG" width="200" height="250" alt="pretty pretty garden">
-    <img src="IMG_9079.png" width="200" height="250" alt="pretty pretty garden"> 
+    <img src="IMG_9079.png" width="200" height="250" alt="cat with SO MUCH MONEY infront of ring camera"> 
       <!-- Note that I set an alt text for this image, always do that!-->
 <hr>
   <div class="list">
